# app_template

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  devNotes.md
backend/: .gitignore
frontend/: .gitignore
frontend/windows/runner/: Runner.rc
public/: tailwind.css
src/: configuration.example.rs  constants.rs  main.rs
src/components/: comment.rs  mod.rs  preview.rs  registration.rs  stories.rs  story_listing.rs
src/pages/: app_settings.rs  home.rs  landing.rs  mod.rs  page_not_found.rs  registration.rs
src/types/: comment.rs  mod.rs  preview_state.rs  story.rs
