[package]
name = "app_template"
version = "0.1.0"
authors = ["Bill McCann <bill.mccann@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dioxus = { version = "0.5.0", features = ["web", "router"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.10.1"
dotenv = "0.15.0"
web-sys = "0.3.55"

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
serde_json = "1.0.116"
reqwest = { version = "0.12.4", features = ["json"] }
async-recursion = "1.1.1"
futures = "0.3.30"
manganis = "0.2.2"
